# Chats

./: .gitignore  CMakeLists.txt  Chats.sln  Server.project  Server.sh  Server.workspace  build.sh
Client/: Client.vcxproj  Client.vcxproj.filters
Client/src/: EntryPoint.cpp
Client/src/network/: Client.cpp  Client.h
Server/: Server.vcxproj  Server.vcxproj.filters
Server/src/: Entrypoint.cpp
Server/src/network/: Server.cpp  Server.h
